Updated final model

--- a/modelling.ipynb
+++ b/modelling.ipynb
@@ -143,58 +143,81 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cf7d8166-171d-413f-92e8-0963767dbfd3",
+   "id": "91caa133-97a3-4f27-b08c-a16276c49d65",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# colums whose unique values are greater than 2\n",
-    "num_cols = [col for col in X_train.columns if X_train[col].nunique() > 2]\n",
-    "# columns whose unique values are < or = 2\n",
-    "cat_cols = [col for col in X_train.columns if X_train[col].nunique() <= 2]"
+    "# num_cols = [\"sex\", 'fbs', 'exang', 'ca', 'age', 'trestbps', 'chol', 'thalach', 'oldpeak', 'thal']\n",
+    "# # cat_cols = [\"cp\", \"restecg\", 'slope']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a277e38d-cf9e-4ea7-97f8-c561ada8b78d",
+   "execution_count": 11,
+   "id": "7031bc3b-6494-427e-8808-ffa062755428",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# colums whose unique values are greater than or equal 3 --- referred to numeric columns\n",
+    "num_cols = [col for col in X_train.columns if X_train[col].nunique() >= 3]\n",
+    "# columns whose unique values are < 3 --- referred to as categorical columns\n",
+    "cat_cols = [col for col in X_train.columns if X_train[col].nunique() < 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3efc5ee0-2a6a-405d-b87c-4597a02cb11c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['age',\n",
-       "  'cp',\n",
-       "  'trestbps',\n",
-       "  'chol',\n",
-       "  'restecg',\n",
-       "  'thalach',\n",
-       "  'oldpeak',\n",
-       "  'slope',\n",
-       "  'ca',\n",
-       "  'thal'],\n",
-       " ['sex', 'fbs', 'exang'])"
+       "['age',\n",
+       " 'cp',\n",
+       " 'trestbps',\n",
+       " 'chol',\n",
+       " 'restecg',\n",
+       " 'thalach',\n",
+       " 'oldpeak',\n",
+       " 'slope',\n",
+       " 'ca',\n",
+       " 'thal']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_cols, cat_cols"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a7a461a8-51a0-4fca-928a-a2a885473bb4",
-   "metadata": {},
-   "source": [
-    "Note"
+    "num_cols"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
+   "id": "55988411-bb1b-4fe4-8f05-0b85140837d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sex', 'fbs', 'exang']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "a1ebe595-c19b-4ef9-8d26-05488c6cec30",
    "metadata": {},
    "outputs": [],
@@ -211,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "1d77a725-d765-4e23-8cde-bc20081f1438",
    "metadata": {},
    "outputs": [],
@@ -227,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "2570667f-8a2e-4078-b9c0-b8c77ea138d6",
    "metadata": {},
    "outputs": [],
@@ -238,7 +261,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
+   "id": "3fea47d9-5c1e-498f-84ee-9b6b659d9a43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.28906186, -0.93569147, -0.19208565,  1.22278352, -1.04199213,\n",
+       "        0.40512154, -0.88967624,  0.96461102,  0.26403574, -0.5751421 ,\n",
+       "        1.        ,  0.        ,  1.        ,  0.        ,  1.        ,\n",
+       "        0.        ])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_transformed[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "cc5f4b87-126e-49ad-adfa-872c790e464e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['num__age', 'num__cp', 'num__trestbps', 'num__chol',\n",
+       "       'num__restecg', 'num__thalach', 'num__oldpeak', 'num__slope',\n",
+       "       'num__ca', 'num__thal', 'cats__sex_0', 'cats__sex_1',\n",
+       "       'cats__fbs_0', 'cats__fbs_1', 'cats__exang_0', 'cats__exang_1'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessing.get_feature_names_out()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "dae2cbd3-dfd6-46d8-b797-8d3460712be4",
    "metadata": {},
    "outputs": [
@@ -266,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "id": "eadfdb31-a879-4cc3-b70d-1c75d7a3cd50",
    "metadata": {},
    "outputs": [],
@@ -288,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "id": "89dfb3b6-617e-49ed-931e-e6a8c3f60035",
    "metadata": {},
    "outputs": [
@@ -298,7 +370,7 @@
        "array([0.79591837, 0.77083333, 0.8125    , 0.875     , 0.89583333])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "id": "1fc61a43-6380-48b9-be94-3f821ea6af35",
    "metadata": {},
    "outputs": [
@@ -329,7 +401,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "id": "ac8623f0-d1a6-4914-a110-372baf3f7ace",
    "metadata": {},
    "outputs": [],
@@ -375,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "id": "5194c3d3-0ab4-4dda-8b88-f60d569b2abf",
    "metadata": {},
    "outputs": [
@@ -383,17 +455,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 24.2 ms, sys: 4.03 ms, total: 28.2 ms\n",
-      "Wall time: 649 ms\n"
+      "CPU times: user 41.9 ms, sys: 43.6 ms, total: 85.5 ms\n",
+      "Wall time: 2.19 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([0.75510204, 0.79166667, 0.79166667, 0.89583333, 0.89583333])"
+       "array([0.79591837, 0.79166667, 0.79166667, 0.89583333, 0.91666667])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "id": "75be8426-2f01-46eb-ad14-03b27cf5f22e",
    "metadata": {},
    "outputs": [
@@ -413,17 +485,17 @@
      "data": {
       "text/plain": [
        "count    5.000000\n",
-       "mean     0.826020\n",
-       "std      0.065455\n",
-       "min      0.755102\n",
+       "mean     0.838350\n",
+       "std      0.062444\n",
+       "min      0.791667\n",
        "25%      0.791667\n",
-       "50%      0.791667\n",
+       "50%      0.795918\n",
        "75%      0.895833\n",
-       "max      0.895833\n",
+       "max      0.916667\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "32ea07e6-54a9-4571-bb4a-4359e5d71668",
    "metadata": {},
    "outputs": [],
@@ -466,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "744ade64-edcf-4b23-9ba4-9af1079f11b3",
    "metadata": {},
    "outputs": [
@@ -474,8 +546,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 38.8 ms, sys: 7.7 ms, total: 46.5 ms\n",
-      "Wall time: 6.48 s\n"
+      "CPU times: user 41 ms, sys: 14.7 ms, total: 55.7 ms\n",
+      "Wall time: 6.52 s\n"
      ]
     },
     {
@@ -484,7 +556,7 @@
        "array([0.75510204, 0.8125    , 0.83333333, 0.875     , 0.85416667])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "f9dcdc88-f59e-40d1-a372-0f97c3944231",
    "metadata": {},
    "outputs": [
@@ -514,7 +586,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "7370b388-dd50-43f6-8ec8-23f3017c51cc",
    "metadata": {},
    "outputs": [
@@ -566,43 +638,43 @@
        "    <tr>\n",
        "      <th>mean</th>\n",
        "      <td>0.830017</td>\n",
-       "      <td>0.792687</td>\n",
+       "      <td>0.838350</td>\n",
        "      <td>0.826020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
        "      <td>0.053215</td>\n",
-       "      <td>0.037656</td>\n",
+       "      <td>0.062444</td>\n",
        "      <td>0.045981</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>0.770833</td>\n",
-       "      <td>0.755102</td>\n",
+       "      <td>0.791667</td>\n",
        "      <td>0.755102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
        "      <td>0.795918</td>\n",
-       "      <td>0.770833</td>\n",
+       "      <td>0.791667</td>\n",
        "      <td>0.812500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
        "      <td>0.812500</td>\n",
-       "      <td>0.791667</td>\n",
+       "      <td>0.795918</td>\n",
        "      <td>0.833333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>0.875000</td>\n",
-       "      <td>0.791667</td>\n",
+       "      <td>0.895833</td>\n",
        "      <td>0.854167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
        "      <td>0.895833</td>\n",
-       "      <td>0.854167</td>\n",
+       "      <td>0.916667</td>\n",
        "      <td>0.875000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -612,16 +684,16 @@
       "text/plain": [
        "        log_reg        xg       cat\n",
        "count  5.000000  5.000000  5.000000\n",
-       "mean   0.830017  0.792687  0.826020\n",
-       "std    0.053215  0.037656  0.045981\n",
-       "min    0.770833  0.755102  0.755102\n",
-       "25%    0.795918  0.770833  0.812500\n",
-       "50%    0.812500  0.791667  0.833333\n",
-       "75%    0.875000  0.791667  0.854167\n",
-       "max    0.895833  0.854167  0.875000"
+       "mean   0.830017  0.838350  0.826020\n",
+       "std    0.053215  0.062444  0.045981\n",
+       "min    0.770833  0.791667  0.755102\n",
+       "25%    0.795918  0.791667  0.812500\n",
+       "50%    0.812500  0.795918  0.833333\n",
+       "75%    0.875000  0.895833  0.854167\n",
+       "max    0.895833  0.916667  0.875000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +701,7 @@
    "source": [
     "pd.DataFrame({\n",
     "    'log_reg': lr_desc,\n",
-    "    'xg': xg_desc,\n",
+    "    'xg': rfc_desc,\n",
     "    'cat': cat_desc\n",
     "})"
    ]
@@ -639,8 +711,7 @@
    "id": "07f86bd8-b654-4cce-b0e5-203f4194e0b9",
    "metadata": {},
    "source": [
-    "The difference in their accuracies is trivial.\n",
-    "xg boost has the lowest spread but it is the worse. catboost was best"
+    "The difference in their accuracies is trivial."
    ]
   },
   {
@@ -1143,7 +1214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get the list of parameters that are available for tuning\n",
+    "# # Get the list of parameters that are available for tuning\n",
     "# list(cat_grid_pipeline.get_params().keys())"
    ]
   },
@@ -1635,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "8ec7501d-c97e-4b7b-a3a2-a4a923426db5",
    "metadata": {},
    "outputs": [],
@@ -1655,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "id": "eb1fa253-841a-4fb5-9c5c-8faf169b1188",
    "metadata": {},
    "outputs": [
@@ -1665,7 +1736,7 @@
        "array([1, 0, 0, 0, 1])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1678,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "23704cb5-b9a0-4e0a-b659-010553f63ef8",
    "metadata": {},
    "outputs": [
@@ -1704,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "8788de97-ffb4-4a7c-ae66-d193d267ad6c",
    "metadata": {},
    "outputs": [],
@@ -1725,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "id": "c64a677d-a996-4573-89f6-b2d68d0ab1d7",
    "metadata": {},
    "outputs": [
@@ -1747,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "ad580726-3c55-4615-97d6-dea02ee8ef0d",
    "metadata": {},
    "outputs": [
@@ -1760,7 +1831,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1784,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "id": "4919ae64-e5c7-4d0f-815e-4afed0a691d7",
    "metadata": {},
    "outputs": [],
@@ -1795,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "id": "5c51f339-192e-4ac1-90ad-730313e4251e",
    "metadata": {},
    "outputs": [
@@ -1809,7 +1880,7 @@
        "       [0.0763279 , 0.9236721 ]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1820,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "id": "1ff136e8-653d-4f90-931a-0e883089c352",
    "metadata": {},
    "outputs": [
@@ -1830,7 +1901,7 @@
        "array([0.71299739, 0.3370448 , 0.17792424, 0.05561408, 0.9236721 ])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1843,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "id": "8ca4391b-8094-4320-9768-2f18e6408203",
    "metadata": {},
    "outputs": [],
@@ -1854,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "id": "32fcba30-7d17-40b2-b191-8e77eced9151",
    "metadata": {},
    "outputs": [
@@ -1866,7 +1937,7 @@
        "       0.56709957, 0.56956522, 0.5720524 , 0.5745614 , 0.57709251])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1877,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "id": "6ef5a784-3652-415b-a604-1fb17f24fec0",
    "metadata": {},
    "outputs": [
@@ -1887,7 +1958,7 @@
        "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1898,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "id": "e4a05d2d-99e2-4b1a-a9b9-1e376b700746",
    "metadata": {},
    "outputs": [
@@ -1910,7 +1981,7 @@
        "       0.03822639, 0.03861739, 0.03904131, 0.04049793, 0.04133717])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1929,14 +2000,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "id": "87bf8a01-e33e-4d58-a1e9-57b6f83e02d1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edfc91ad93454f8f906c4f1868e59403",
+       "model_id": "594c2d40bdc744509869020d9cb3e62a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2013,7 +2084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "id": "d364b34b-8120-4ff7-b543-f8a74fbd9a34",
    "metadata": {},
    "outputs": [
@@ -2080,7 +2151,7 @@
        "                                    random_state=42, solver='saga'))])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2092,7 +2163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "id": "51a6b7fc-0cf4-418a-b329-89e9ad7a8883",
    "metadata": {},
    "outputs": [
@@ -2102,7 +2173,7 @@
        "array([0.22066802, 0.26904663, 0.02977006, 0.64345544, 0.6772934 ])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2115,7 +2186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "id": "179f203c-dfce-4cd8-ac6c-95411edf7548",
    "metadata": {},
    "outputs": [
@@ -2125,7 +2196,7 @@
        "array([False, False, False,  True,  True])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2138,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "id": "b8f92486-edbe-41f2-9ff9-71fc03949637",
    "metadata": {},
    "outputs": [
@@ -2184,14 +2255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "id": "6fa6d378-432e-4613-9638-36b5e9ede94c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Pickle the final model\n",
     "\n",
-    "# with open (\"final_log_reg_model\", \"wb\") as f:\n",
+    "# with open (\"final_log_reg_model.pkl\", \"wb\") as f:\n",
     "#     pickle.dump(final_model, f)"
    ]
   },
@@ -2374,16 +2445,6 @@
     "What it means is that the odds of having a heart disease is when you have chest pain is 2 times greater than when you have any other symptom in the dataset\n",
     "\n",
     "Any odds that is  > 1 indicates features that are most associated with increase in heart disease"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "197c162c-26ba-4a3d-bfa3-26d6796f400b",
-   "metadata": {},
-   "source": [
-    "Can we establish a causal relationship between sex and heart disease. or is it beacluse there aer ots of 1 gender compared to others in the dataset?\n",
-    "\n",
-    "The problem with observational data is the presence of lurking variables that migh affect analysis?"
    ]
   }
  ],
